cloudformation/Network/Security_Groups.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Network Security Groups.",

  "Parameters": {
    "Environment": {
      "Description": "Environment name assigned to EC2 instances (e.g. 'prod' or 'test').",
      "Type": "String",
      "Default": "",
      "ConstraintDescription": "Must be a string."
    },
    "Project": {
      "Description": "Project name.",
      "Type": "String",
      "Default": "",
      "ConstraintDescription": "Must be a string."
    },
    "VPC": {
      "Default": "",
      "Description": "VPC ID",
      "Type": "String"
    },
    "VPCCIDR": {
      "Description": "CIDR block of the VPC.",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be valid CIDR notation (i.e. x.x.x.x/x)."
    },
    "VPNCIDR": {
      "Description": "CIDR block of the VPC.",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "10.0.0.0/8",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be valid CIDR notation (i.e. x.x.x.x/x)."
    },
    "BastionSSHFrom": {
      "Description": "Lockdown SSH access to the bastion host",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "must be a valid CIDR range of the form x.x.x.x/x."
    }
  },

  "Resources": {
    "BastionSecurityGroup": {
      "Properties": {
        "GroupDescription": "Enable communication to bastion host(s).",
        "SecurityGroupEgress": [{
          "CidrIp": "0.0.0.0/0",
          "FromPort": "-1",
          "IpProtocol": "icmp",
          "ToPort": "-1"
        }, {
          "CidrIp": "0.0.0.0/0",
          "FromPort": "0",
          "IpProtocol": "udp",
          "ToPort": "65535"
        }, {
          "CidrIp": "0.0.0.0/0",
          "FromPort": "0",
          "IpProtocol": "tcp",
          "ToPort": "65535"
        }],
        "SecurityGroupIngress": [{
          "CidrIp": {
            "Ref": "VPCCIDR"
          },
          "FromPort": "-1",
          "IpProtocol": "icmp",
          "ToPort": "-1"
        }, {
          "CidrIp": {
            "Ref": "BastionSSHFrom"
          },
          "FromPort": "22",
          "IpProtocol": "tcp",
          "ToPort": "22"
        }],
        "Tags": [{
          "Key": "environment",
          "Value": {
            "Ref": "Environment"
          }
        }, {
          "Key": "project",
          "Value": {
            "Ref": "Project"
          }
        }, {
          "Key": "Name",
          "Value": "Bastion"
        }],
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "Saltmaster2016SecurityGroup": {
      "Properties": {
        "GroupDescription": "Enable communication to bastion host(s).",
        "SecurityGroupEgress": [{
          "CidrIp": "0.0.0.0/0",
          "FromPort": "-1",
          "IpProtocol": "icmp",
          "ToPort": "-1"
        }, {
          "CidrIp": "0.0.0.0/0",
          "FromPort": "0",
          "IpProtocol": "udp",
          "ToPort": "65535"
        }, {
          "CidrIp": "0.0.0.0/0",
          "FromPort": "0",
          "IpProtocol": "tcp",
          "ToPort": "65535"
        }],
        "SecurityGroupIngress": [{
          "CidrIp": {
            "Ref": "VPCCIDR"
          },
          "FromPort": "-1",
          "IpProtocol": "icmp",
          "ToPort": "-1"
        }, {
          "CidrIp": {
            "Ref": "VPCCIDR"
          },
          "FromPort": "22",
          "IpProtocol": "tcp",
          "ToPort": "22"
        }, {
          "CidrIp": "0.0.0.0/0",
          "FromPort": "4505",
          "IpProtocol": "tcp",
          "ToPort": "4505"
        }, {
          "CidrIp": "0.0.0.0/0",
          "FromPort": "4506",
          "IpProtocol": "tcp",
          "ToPort": "4506"
        }],
        "Tags": [{
          "Key": "environment",
          "Value": {
            "Ref": "Environment"
          }
        }, {
          "Key": "project",
          "Value": {
            "Ref": "Project"
          }
        }, {
          "Key": "Name",
          "Value": "Salmaster"
        }],
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "DashboardSecurityGroup":{
        "Type" : "AWS::EC2::SecurityGroup",
        "Properties" : {
            "GroupDescription" : "Allow http to client host",
            "VpcId" : {"Ref" : "VPC"},
            "SecurityGroupIngress" : [
                {"IpProtocol" : "icmp", "FromPort" : "-1", "ToPort" : "-1", "CidrIp" : { "Ref": "VPCCIDR"}},
                {"IpProtocol" : "tcp","FromPort" : "5432","ToPort" : "5432","CidrIp" : {"Ref":"VPCCIDR"}},
                {"IpProtocol" : "tcp","FromPort" : "22","ToPort" : "22", "CidrIp" : {"Ref":"VPCCIDR"}},
                {"IpProtocol" : "tcp","FromPort" : "80","ToPort" : "8080","CidrIp" : {"Ref":"VPCCIDR"}},
                {"IpProtocol" : "tcp","FromPort" : "443","ToPort" : "443","CidrIp" : {"Ref":"VPCCIDR"}}
            ],
            "SecurityGroupEgress" : [
                {"IpProtocol" : "icmp", "FromPort" : "-1", "ToPort" : "-1", "CidrIp" : "0.0.0.0/0"},
                {"IpProtocol" : "tcp","FromPort" : "0","ToPort" : "65535","CidrIp" : "0.0.0.0/0"},
                {"IpProtocol" : "udp","FromPort" : "0","ToPort" : "65535","CidrIp" : "0.0.0.0/0"}
            ]
        }
    },
    "DashboardELBSecurityGroup" : {
        "Type" : "AWS::EC2::SecurityGroup",
        "Properties" : {
            "GroupDescription" : "Enable communication to the Dashboard ELB.",
            "VpcId" : { "Ref" : "VPC" },
            "SecurityGroupIngress" : [
                                    { "IpProtocol" : "tcp", "FromPort" : "80", "ToPort" : "80", "CidrIp" : "0.0.0.0/0" },
                                    { "IpProtocol" : "tcp", "FromPort" : "443", "ToPort" : "443", "CidrIp" : "0.0.0.0/0" }
                                    ],
            "SecurityGroupEgress" : [
                                    { "IpProtocol" : "tcp", "FromPort" : "80",  "ToPort" : "80",  "CidrIp" : { "Ref": "VPCCIDR" } },
                                    { "IpProtocol" : "tcp", "FromPort" : "80",  "ToPort" : "80",  "DestinationSecurityGroupId" : { "Ref": "DashboardSecurityGroup" } },
                                    { "IpProtocol" : "tcp", "FromPort" : "443",  "ToPort" : "443",  "DestinationSecurityGroupId" : { "Ref": "DashboardSecurityGroup" } }
                                    ],
            "Tags" : [
                    { "Key" : "project", "Value" : { "Ref": "Project" } },
                    { "Key" : "environment", "Value" : { "Ref": "Environment" } },
                    { "Key" : "Name", "Value": { "Fn::Join": [ "-", [ { "Ref": "Environment" }, "Dashboard-ELB" ] ] } }
                    ]
          }
      }
  },
  "Outputs": {
    "BastionSecurityGroup": {
      "Description": "Bastion Security Group ID",
      "Value": {
        "Ref": "BastionSecurityGroup"
      }
    },
    "Saltmaster2016SecurityGroup": {
      "Description": "Saltmaster Security Group ID",
      "Value": {
        "Ref": "Saltmaster2016SecurityGroup"
      }
    },
    "DashboardSecurityGroup": {
        "Description": "Dashboard Security Group ID",
        "Value": {
            "Ref": "DashboardSecurityGroup"
        }
    },
    "DashboardELBSecurityGroup": {
        "Description": "Dashboard ELB Security Group ID",
        "Value": {
            "Ref": "DashboardELBSecurityGroup"
        }
    }
  }
}
